# OpenWebLeads

./: .env  .env.example  .gitignore  Dockerfile  PRD.md  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_baseline.py  002_phase2_vault_and_cost_tracking.py  003_pgvector_embedding.py  004_auth_users.py
app/: auth.py  config.py  crm.py  db.py  dedup.py  egress.py  enrichment.py  export.py  llm.py  main.py  models.py  ratelimit.py  schemas.py  scoring.py  scraper.py  tasks.py  vault.py  webhook.py
app/static/: setup.html
frontend/: Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/companies/: page.tsx
frontend/app/companies/[id]/: page.tsx
frontend/app/enrich/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/setup/: page.tsx
frontend/app/vault/: page.tsx
frontend/lib/: api.ts
tests/: test_auth.py  test_crm.py  test_egress.py  test_enrichment.py  test_export.py  test_llm.py  test_ratelimit.py  test_scoring.py  test_vault_crypto.py
