[project]
name = "openenrich"
version = "0.3.0"
description = "Open-source B2B lead enrichment engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "alembic",
    "celery[redis]",
    "playwright",
    "pydantic[email]",
    "pydantic-settings",
    "httpx",
    "cryptography",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
